--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <h2>Available Adventures</h2>
   <div class="resource-card">
     <h3>Pulp Cthulhu: El Signo Amarillo</h3>
-    <p>Resources for a thrilling adventure of cosmic horror and two-fisted action set in Peru.</p>
+    <p>Resources for a thrilling adventure of cosmic horror and two-fisted action set in Ceuta, Spain.</p>
     <a href="/el-signo-amarillo/players">Player Resources &raquo;</a><br>
     <a href="/el-signo-amarillo/keepers">Keeper Resources &raquo;</a>
   </div>
