Fixed info in home and players.html

--- a/el-signo-amarillo/players.html
+++ b/el-signo-amarillo/players.html
@@ -10,7 +10,7 @@
     </div>
     <div class="resource-card">
         <h3>Ceuta, Spain - Map</h3>
-        <p>A player-safe map of the city of Lima as it was in the 1920s.</p>
+        <p>A player-safe map of the city of Ceuta, Spain as it was in the 1920s.</p>
         <a href="#">View Map</a>
     </div>
 </main>
