--- a/home.html
+++ b/home.html
@@ -8,6 +8,6 @@
     <h3>Pulp Cthulhu: El Signo Amarillo</h3>
     <p>Resources for a thrilling adventure of cosmic horror and two-fisted action set in Ceuta, Spain in 1921.</p>
     <a href="/el-signo-amarillo/players">Player Resources &raquo;</a><br>
-    <a href="/el-signo-amarillo/keepers">Keeper Resources &raquo;</a>
+    <a href="/el-signo-amarillo/keepers/keepers.html">Keeper Resources &raquo;</a>
   </div>
 </main>
